test/fail/typdef_assign_undeclared_child.cll
typedef $A = { int a; };
$A $a = { a = 0; b = 1; };
0;
